# prompt-core

./: .agent-navigation  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  QUICKSTART.md  README.md  RESEARCH_FINDINGS.md  TESTING.md  complete_example.py  config.json.example  example.py  final_research_summary.md  main.py  plan.md  pyproject.toml  requirements.txt  spec.md  temp_update.py  test_basic.py  test_basic_old.py  test_conversation.py  test_conversation_old.py
.github/workflows/: ci.yml  tests.yml
docs/: TESTING.md
evaluation_criteria/: __init__.py  conversation.py  flows.py  llm_interaction.py  models.py  presentation.py
prompt_core/: __init__.py  cli.py  config.py  conversation.py  conversation_flows.py  exceptions.py  llm_interaction.py  llm_interaction_multi.py  llm_provider.py  models.py  session_logging.py
prompt_core/llm_providers/: __init__.py  openai_provider.py
scripts/: check_api_keys.py  run_with_timeout.py
tests/: conftest.py
tests/evals/: test_real_api.py
tests/integration/: test_real_api.py
tests/unit/: test_llm_interaction.py  test_models.py  test_orchestrator_logic.py
