[project]
name = "prompt-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "instructor>=1.15.1",
    "litellm>=1.58.15",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "typer>=0.24.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.11.0",
]
